# poly

./: .gitignore  CMakeLists.txt  cholesky.c  cholesky.h  gemver.c  main.c  polybench.c  polybench.h  symm.c  syr2k.c
2mm/: 2mm.c  2mm.h
cholesky/: cholesky.c
gemver/: gemver.c  gemver.h
symm/: symm.c  symm.h
syr2k/: syr2k.c  syr2k.h
